--- a/static/styles.css
+++ b/static/styles.css
@@ -16,81 +16,117 @@
     box-sizing: border-box;
 }
 
-body {
+/*
+    configuracion para las fuentes
+*/
+
+/* font converted using font-converter.net. thank you! */
+@font-face {
+    font-family: "LatoCode";
+    src: url("./fonts/LatoCode/LatoCode-Regular.eot"); /* IE9 Compat Modes */
+    src: url("./fonts/LatoCode/LatoCode-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+      url("./fonts/LatoCode/LatoCode-Regular.otf") format("opentype"), /* Open Type Font */
+      url("./fonts/LatoCode/LatoCode-Regular.svg") format("svg"), /* Legacy iOS */
+      url("./fonts/LatoCode/LatoCode-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
+      url("./fonts/LatoCode/LatoCode-Regular.woff") format("woff"), /* Modern Browsers */
+      url("./fonts/LatoCode/LatoCode-Regular.woff2") format("woff2"); /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+}
+
+/*
+    estilos generales
+*/
+
+.header {
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    padding: 2em;
+    font-family: "LatoCode";
+    font-size: 10px;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, .2);
+    position: fixed;
+    top: 0;
+}
+
+.header__content {
+    margin: 0 auto 0;
+    width: 92%;
+    max-width: 1024px;
+}
+
+.header__title {
+    color: #4d4c7d;
+}
+
+body {
+    padding-top: 5em;
 }
 
 .main {
-    width: 96%;
-    max-width: 400px;
+    width: 100%;
 }
 
-.description {
-    text-align: center;
-    margin-bottom: 1em;
-    color: #2a2a2a;
-    font-size: 15px;
+.main__content {
+    margin: 0 auto 0;
+    width: 92%;
+    max-width: 1024px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+    padding-top: 1em;
 }
 
-input {
-    font-size: 15px;
-}
-
-.title {
-    text-align: center;
-    font-size: 24px;
-    color: #d63447;
-    margin-bottom: .5em;
+.description__parrafo {
+    font-family: "LatoCode";
+    font-size: 17px;
 }
 
 .form {
-    border: solid 1px rgba(0, 0, 0, .4);
+    border: none;
+    border: solid 1px rgba(0, 0, 0, .3);
+    border-radius: 3px;
     padding: 1em;
+}
+
+.form__label {
+    width: 100%;
+    display: block;
+    display: grid;
+    grid-template-columns: 120px 1fr;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.form__label--input {
+    display: block;
+    padding: .7em;
+    font-size: 15px;
+    font-family: "LatoCode";
+    border: none;
+    border: solid 1px rgba(0, 0, 0, .3);
     border-radius: 3px;
 }
 
-input {
-    display: block;    
-    margin-bottom: 1em;
-    width: 100%;
-    padding: .5em 1em;
+.form__label--input:focus {
+    border-color: #d92027;
+}
+
+.form__submit {
+    background-color: #4d4c7d;
     border: none;
-    border: solid 1px rgba(0, 0, 0, .4);
-    border-radius: 5px;
-}
-
-input:focus {
-    border-color: #d63447;
-}
-
-.label {
     display: block;
     width: 100%;
-    margin-bottom: 1em;
-    font-size: 15px;
-}
-
-input[type="submit"] {
-    cursor: pointer;
-    border: none;
-    background-color: #d63447;
     color: #ffffff;
+    font-family: "LatoCode";
     font-size: 16px;
+    cursor: pointer;
+    margin: 0 auto 0;
+    margin-bottom: 1em;
+    border-radius: 3px;
+    padding: .6em 0;
 }
 
-input[type="submit"]:active {
+.form__submit:active {
     transform: scale(.98);
-}
-
-.response {
-    margin-bottom: 0;
-}
-
-.bottom {
-    margin-top: .5em;
-    font-size: 15px;
 }
